# CygNES

./: .clang-format  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md
cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CygNES  Makefile  cmake_install.cmake  dev-mode.cmake  install-rules.cmake  install-script.cmake  variables.cmake
source/: Utils.hpp  cartridge.cpp  cartridge.hpp  controller.cpp  controller.hpp  cpu.cpp  cpu.hpp  lib.cpp  lib.hpp  main.cpp  mapper.cpp  mapper.hpp  mapper000.cpp  mapper000.hpp  ppu.cpp  ppu.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt
test/source/: CygNES_test.cpp
